--- a/video_scraper_colab.ipynb
+++ b/video_scraper_colab.ipynb
@@ -4,25 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🎥 Video Scraper Pipeline - Google Colab\n",
+    "# 🎬 Interactive Video Scraper - Google Colab\n",
     "\n",
-    "This notebook runs the complete video ingestion pipeline:\n",
-    "1. Harvests video URLs from websites\n",
-    "2. Downloads videos using yt-dlp + browser extraction\n",
-    "3. Uploads to Bunny Stream CDN\n",
-    "4. Tracks status in SQLite database (persisted to Google Drive)\n",
+    "This notebook provides an **interactive interface** to scrape and upload videos to Bunny Stream.\n",
     "\n",
     "---\n",
     "\n",
     "## ⚙️ Prerequisites\n",
     "\n",
     "**Required Colab Secrets:**\n",
-    "- `BUNNY_API_KEY` - Get from https://panel.bunny.net/account\n",
+    "- `BUNNY_API_KEY` - Get from https://panel.bunny.net/account → API\n",
     "- `BUNNY_LIBRARY_ID` - Get from https://panel.bunny.net/stream\n",
     "\n",
     "**How to add secrets:**\n",
     "1. Click the 🔑 key icon in the left sidebar\n",
-    "2. Add `BUNNY_API_KEY` and `BUNNY_LIBRARY_ID`\n",
+    "2. Add both secrets\n",
     "3. Enable \"Notebook access\" toggle\n",
     "\n",
     "---"
@@ -34,7 +30,7 @@
    "source": [
     "## 📁 Step 1: Mount Google Drive\n",
     "\n",
-    "Database and logs will be saved to `/content/drive/MyDrive/video_engine_data/`"
+    "Database and logs will be saved to Google Drive for persistence"
    ]
   },
   {
@@ -53,7 +49,7 @@
     "DRIVE_DATA_DIR = '/content/drive/MyDrive/video_engine_data'\n",
     "os.makedirs(DRIVE_DATA_DIR, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Drive mounted successfully\")\n",
+    "print(\"✅ Drive mounted successfully\")\n",
     "print(f\"📂 Data directory: {DRIVE_DATA_DIR}\")"
    ]
   },
@@ -101,7 +97,7 @@
    "source": [
     "## 📦 Step 3: Install System Dependencies\n",
     "\n",
-    "Install Playwright and Chromium browser for Cloudflare-protected sites"
+    "Install Playwright and Chromium browser"
    ]
   },
   {
@@ -111,22 +107,12 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Install Playwright system dependencies\n",
+    "# Install Playwright system dependencies (silent)\n",
     "apt-get update -qq\n",
     "apt-get install -y -qq \\\n",
-    "    libnss3 \\\n",
-    "    libnspr4 \\\n",
-    "    libatk1.0-0 \\\n",
-    "    libatk-bridge2.0-0 \\\n",
-    "    libcups2 \\\n",
-    "    libdrm2 \\\n",
-    "    libxkbcommon0 \\\n",
-    "    libxcomposite1 \\\n",
-    "    libxdamage1 \\\n",
-    "    libxfixes3 \\\n",
-    "    libxrandr2 \\\n",
-    "    libgbm1 \\\n",
-    "    libasound2 \\\n",
+    "    libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 \\\n",
+    "    libcups2 libdrm2 libxkbcommon0 libxcomposite1 \\\n",
+    "    libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2 \\\n",
     "    > /dev/null 2>&1\n",
     "\n",
     "echo \"✅ System dependencies installed\""
@@ -155,7 +141,8 @@
     "    beautifulsoup4>=4.12.0 \\\n",
     "    lxml>=4.9.0 \\\n",
     "    playwright>=1.40.0 \\\n",
-    "    playwright-stealth>=0.1.0\n",
+    "    playwright-stealth>=0.1.0 \\\n",
+    "    python-dotenv>=1.0.0\n",
     "\n",
     "echo \"✅ Python packages installed\""
    ]
@@ -175,9 +162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📤 Step 5: Upload Project Files\n",
+    "## 📦 Step 5: Clone Project from GitHub\n",
     "\n",
-    "Upload the `video_engine` folder to Colab"
+    "Clone the latest version from your repository"
    ]
   },
   {
@@ -187,83 +174,38 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from google.colab import files\n",
     "\n",
-    "print(\"📤 Upload your video_engine.zip file\")\n",
-    "print(\"   (Create zip: compress the video_engine folder)\\n\")\n",
+    "# GitHub repository URL\n",
+    "REPO_URL = \"https://github.com/rkpcode/auto_web_scraper.git\"\n",
     "\n",
-    "uploaded = files.upload()\n",
+    "print(f\"📦 Cloning repository from GitHub...\")\n",
+    "print(f\"   Repository: {REPO_URL}\\n\")\n",
     "\n",
-    "# Extract the zip file\n",
-    "import zipfile\n",
-    "for filename in uploaded.keys():\n",
-    "    if filename.endswith('.zip'):\n",
-    "        with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
-    "            zip_ref.extractall('/content')\n",
-    "        print(f\"\\n✅ Extracted {filename}\")\n",
-    "        break\n",
+    "# Remove existing directory if present\n",
+    "if os.path.exists('/content/auto_web_scraper'):\n",
+    "    !rm -rf /content/auto_web_scraper\n",
+    "    print(\"🗑️  Removed existing directory\\n\")\n",
     "\n",
-    "# Verify extraction\n",
-    "if os.path.exists('/content/video_engine'):\n",
-    "    print(\"✅ Project files ready\")\n",
-    "    !ls -la /content/video_engine\n",
+    "# Clone the repository\n",
+    "!git clone {REPO_URL} /content/auto_web_scraper\n",
+    "\n",
+    "# Verify clone\n",
+    "if os.path.exists('/content/auto_web_scraper/video_engine'):\n",
+    "    print(\"\\n✅ Repository cloned successfully!\")\n",
+    "    print(\"\\n📂 Project structure:\")\n",
+    "    !ls -la /content/auto_web_scraper/video_engine\n",
     "else:\n",
-    "    print(\"❌ ERROR: video_engine folder not found!\")\n",
-    "    print(\"   Make sure your zip contains a 'video_engine' folder at the root\")"
+    "    print(\"❌ ERROR: video_engine folder not found in repository!\")\n",
+    "    print(\"   Please check the repository structure\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📝 Step 6: Create/Upload Links File\n",
+    "## 🔧 Step 6: Database Cleanup (Optional)\n",
     "\n",
-    "Create a `links.txt` file with video URLs to process"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Option A: Upload existing links.txt\n",
-    "from google.colab import files\n",
-    "print(\"📤 Upload your links.txt file (or skip and create manually below)\\n\")\n",
-    "uploaded = files.upload()\n",
-    "\n",
-    "if 'links.txt' in uploaded:\n",
-    "    !mv links.txt /content/video_engine/links.txt\n",
-    "    print(\"✅ links.txt uploaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Option B: Create links.txt manually\n",
-    "links_content = \"\"\"https://example.com/video1\n",
-    "https://example.com/video2\n",
-    "https://example.com/video3\n",
-    "\"\"\"\n",
-    "\n",
-    "with open('/content/video_engine/links.txt', 'w') as f:\n",
-    "    f.write(links_content)\n",
-    "\n",
-    "print(\"✅ links.txt created\")\n",
-    "print(\"\\n📝 Current links:\")\n",
-    "!cat /content/video_engine/links.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 🔍 Step 7 (Optional): Run Harvester\n",
-    "\n",
-    "Auto-discover video URLs from a website using sitemap or crawling"
+    "Run this if you encounter 'database is locked' errors"
    ]
   },
   {
@@ -273,37 +215,78 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/content/video_engine')\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
+    "\n",
+    "# Run cleanup\n",
+    "!python /content/auto_web_scraper/video_engine/cleanup_db.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# 🎬 INTERACTIVE PIPELINE\n",
+    "\n",
+    "Choose one of the following modes:\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🌐 Mode 1: Auto-Discovery (Recommended)\n",
+    "\n",
+    "Enter a website URL and automatically discover all video URLs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
     "\n",
     "from harvester import harvest_and_save\n",
+    "from database import db\n",
     "\n",
-    "# Configure target website\n",
-    "WEBSITE_URL = \"https://example.com\"  # Change this to your target site\n",
+    "# ============================================\n",
+    "# CONFIGURE HERE\n",
+    "# ============================================\n",
+    "WEBSITE_URL = \"https://viralkand.com\"  # Change this\n",
     "METHOD = \"auto\"  # Options: 'auto', 'sitemap', 'generic'\n",
-    "MAX_PAGES = 10   # For generic crawling\n",
+    "MAX_PAGES = 20   # For generic crawling\n",
+    "# ============================================\n",
     "\n",
-    "print(f\"🔍 Harvesting URLs from: {WEBSITE_URL}\")\n",
+    "print(f\"🔍 Discovering videos from: {WEBSITE_URL}\")\n",
     "print(f\"   Method: {METHOD}\")\n",
     "print(f\"   Max pages: {MAX_PAGES}\\n\")\n",
     "\n",
     "try:\n",
-    "    new_count = harvest_and_save(\n",
-    "        WEBSITE_URL,\n",
-    "        method=METHOD,\n",
-    "        max_pages=MAX_PAGES\n",
-    "    )\n",
-    "    print(f\"\\n✅ Added {new_count} new video URLs to database\")\n",
+    "    new_count = harvest_and_save(WEBSITE_URL, method=METHOD, max_pages=MAX_PAGES)\n",
+    "    print(f\"\\n✅ Discovered {new_count} new video URLs\")\n",
+    "    \n",
+    "    # Show stats\n",
+    "    stats = db.get_stats()\n",
+    "    print(f\"\\n📊 Database status:\")\n",
+    "    for status, count in stats.items():\n",
+    "        print(f\"   {status:12s}: {count:3d}\")\n",
     "except Exception as e:\n",
-    "    print(f\"❌ Harvesting failed: {e}\")"
+    "    print(f\"\\n❌ Discovery failed: {e}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🚀 Step 8: Run Main Pipeline\n",
+    "## ✍️ Mode 2: Manual URL Entry\n",
     "\n",
-    "Download videos and upload to Bunny Stream"
+    "Add specific video URLs manually"
    ]
   },
   {
@@ -313,31 +296,139 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/content/video_engine')\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
     "\n",
-    "from main import run_pipeline\n",
+    "from database import db\n",
+    "\n",
+    "# ============================================\n",
+    "# ADD YOUR VIDEO URLs HERE\n",
+    "# ============================================\n",
+    "video_urls = [\n",
+    "    \"https://viralkand.com/video1\",\n",
+    "    \"https://viralkand.com/video2\",\n",
+    "    \"https://viralkand.com/video3\",\n",
+    "]\n",
+    "# ============================================\n",
+    "\n",
+    "print(f\"✍️  Adding {len(video_urls)} URLs to database...\\n\")\n",
+    "\n",
+    "added = 0\n",
+    "for url in video_urls:\n",
+    "    if db.insert_video(url):\n",
+    "        print(f\"  ✅ {url}\")\n",
+    "        added += 1\n",
+    "    else:\n",
+    "        print(f\"  ⚠️  {url} (already exists)\")\n",
+    "\n",
+    "print(f\"\\n✅ Added {added} new URLs\")\n",
+    "\n",
+    "# Show stats\n",
+    "stats = db.get_stats()\n",
+    "print(f\"\\n📊 Database status:\")\n",
+    "for status, count in stats.items():\n",
+    "    print(f\"   {status:12s}: {count:3d}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📂 Mode 3: Load from File\n",
+    "\n",
+    "Upload and load URLs from a text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "import sys\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
+    "\n",
+    "from database import db\n",
+    "\n",
+    "print(\"📤 Upload your links.txt file\\n\")\n",
+    "uploaded = files.upload()\n",
+    "\n",
+    "if 'links.txt' in uploaded:\n",
+    "    # Read URLs\n",
+    "    with open('links.txt', 'r') as f:\n",
+    "        urls = [line.strip() for line in f if line.strip() and not line.startswith('#')]\n",
+    "    \n",
+    "    print(f\"\\n📂 Found {len(urls)} URLs in file\\n\")\n",
+    "    \n",
+    "    # Add to database\n",
+    "    added = 0\n",
+    "    for url in urls:\n",
+    "        if db.insert_video(url):\n",
+    "            added += 1\n",
+    "    \n",
+    "    print(f\"\\n✅ Added {added} new URLs\")\n",
+    "    \n",
+    "    # Show stats\n",
+    "    stats = db.get_stats()\n",
+    "    print(f\"\\n📊 Database status:\")\n",
+    "    for status, count in stats.items():\n",
+    "        print(f\"   {status:12s}: {count:3d}\")\n",
+    "else:\n",
+    "    print(\"❌ No file uploaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 🚀 Step 7: Run Pipeline\n",
+    "\n",
+    "Process all pending videos (download + upload to Bunny Stream)\n",
+    "\n",
+    "**This will process ALL pending URLs in the database**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
+    "\n",
+    "from main import main as run_pipeline\n",
     "\n",
     "print(\"🚀 Starting video pipeline...\\n\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"=\" * 60)\n",
     "\n",
     "try:\n",
     "    run_pipeline()\n",
-    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
     "    print(\"✅ Pipeline completed successfully!\")\n",
-    "    print(\"=\"*60)\n",
+    "    print(\"=\" * 60)\n",
     "except KeyboardInterrupt:\n",
     "    print(\"\\n⚠️ Pipeline stopped by user\")\n",
     "except Exception as e:\n",
     "    print(f\"\\n❌ Pipeline failed: {e}\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()"
+    "    traceback.print_exc()\n",
+    "\n",
+    "print(\"\\n============================================================\")\n",
+    "print(\"✅ Pipeline execution complete!\")\n",
+    "print(\"============================================================\")\n",
+    "print(\"Check your Bunny Stream dashboard for uploaded videos.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📊 Step 9: Monitor Progress\n",
+    "---\n",
+    "\n",
+    "## 📊 Step 8: Monitor Progress\n",
     "\n",
     "Check database status and view logs"
    ]
@@ -349,27 +440,27 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/content/video_engine')\n",
+    "sys.path.append('/content/auto_web_scraper/video_engine')\n",
     "\n",
-    "from database import VideoDatabase\n",
-    "\n",
-    "db = VideoDatabase()\n",
+    "from database import db\n",
     "\n",
     "# Get status counts\n",
-    "stats = db.get_status_counts()\n",
+    "stats = db.get_stats()\n",
     "\n",
     "print(\"📊 DATABASE STATUS\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"=\" * 60)\n",
     "for status, count in stats.items():\n",
     "    print(f\"  {status:12s}: {count:3d}\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"=\" * 60)\n",
     "\n",
     "# Show pending URLs\n",
-    "pending = db.get_pending_urls(limit=5)\n",
+    "pending = db.get_pending_urls()\n",
     "if pending:\n",
-    "    print(\"\\n📝 Next 5 pending URLs:\")\n",
-    "    for url in pending:\n",
-    "        print(f\"  - {url}\")\n",
+    "    print(f\"\\n📝 Pending URLs ({len(pending)}):\")\n",
+    "    for i, url in enumerate(pending[:5], 1):\n",
+    "        print(f\"  {i}. {url}\")\n",
+    "    if len(pending) > 5:\n",
+    "        print(f\"  ... and {len(pending) - 5} more\")\n",
     "else:\n",
     "    print(\"\\n✅ No pending URLs\")"
    ]
@@ -387,7 +478,7 @@
     "\n",
     "if os.path.exists(log_file):\n",
     "    print(\"📋 RECENT LOGS (last 50 lines)\")\n",
-    "    print(\"=\"*60)\n",
+    "    print(\"=\" * 60)\n",
     "    !tail -n 50 {log_file}\n",
     "else:\n",
     "    print(\"⚠️ No log file found yet\")"
@@ -397,7 +488,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔄 Step 10: Download Database (Optional)\n",
+    "---\n",
+    "\n",
+    "## 🔄 Step 9: Download Database (Optional)\n",
     "\n",
     "Download the SQLite database for local inspection"
    ]
@@ -409,6 +502,7 @@
    "outputs": [],
    "source": [
     "from google.colab import files\n",
+    "import os\n",
     "\n",
     "db_path = '/content/drive/MyDrive/video_engine_data/video_tracker.db'\n",
     "\n",
@@ -428,29 +522,24 @@
     "## 🆘 Troubleshooting\n",
     "\n",
     "### Memory Errors\n",
-    "- Reduce `MAX_WORKERS` to 1: `os.environ['MAX_WORKERS'] = '1'`\n",
+    "- Reduce `MAX_WORKERS` to 1 in Step 2\n",
     "- Restart runtime: Runtime → Restart runtime\n",
     "\n",
-    "### Browser Crashes\n",
-    "- Check if Chromium is installed: `!playwright install chromium`\n",
-    "- Verify system dependencies are installed (Step 3)\n",
+    "### Database Locked\n",
+    "- Re-run Step 6 (Database Cleanup)\n",
+    "- Restart runtime\n",
     "\n",
-    "### Timeout Issues\n",
-    "- Colab sessions timeout after 12 hours idle\n",
-    "- For long-running jobs, consider upgrading to Colab Pro\n",
-    "- Database persists in Google Drive, so you can resume\n",
-    "\n",
-    "### Missing Secrets\n",
-    "- Click 🔑 in left sidebar\n",
-    "- Add `BUNNY_API_KEY` and `BUNNY_LIBRARY_ID`\n",
-    "- Enable \"Notebook access\" toggle\n",
+    "### Upload Failures\n",
+    "- Check Colab Secrets (🔑 icon)\n",
+    "- Verify API key is correct\n",
+    "- Check Bunny Stream dashboard for quota limits\n",
     "\n",
     "---\n",
     "\n",
     "## 📚 Resources\n",
     "\n",
     "- [Bunny Stream Dashboard](https://panel.bunny.net/stream)\n",
-    "- [Project Documentation](https://github.com/yourusername/video-scraper)\n",
+    "- [GitHub Repository](https://github.com/rkpcode/auto_web_scraper)\n",
     "- [yt-dlp Documentation](https://github.com/yt-dlp/yt-dlp)\n",
     "\n",
     "---"
